<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="64dp"
    android:paddingRight="64dp"
    android:paddingTop="16dp"
    tools:context="com.example.android.taller_claselist.agregar_celulares">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:fillViewport="false">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/agregar"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtprecio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/precio"
                android:inputType="textPersonName|number"
                android:numeric="integer" />

            <EditText
                android:id="@+id/txtcapacidad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/capacidadRam"
                android:inputType="textPersonName|number"
                android:numeric="integer|signed|decimal"
                android:phoneNumber="false" />

            <TextView
                android:id="@+id/txtMarca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Marca"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/cbxmarca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Color"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/cbxcolor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Sistema"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/cbxsistema"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:layout_marginTop="20dp">

                <Button
                    android:id="@+id/guardar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="Guardar"
                    android:text="@string/guardar" />
                    android:id="@+id/btnAgregar"
                    android:onClick="Guardar" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/limpiar"
                    android:id="@+id/button2" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
